Added tests to static and singleton method calls
Some methods that refer to static methods (within a static or a non-static class) or methods within a singleton class, might need to be unit tested. These changes suggest ways to refactor them to make those methods unit testable

--- a/UnitTestingCSharp/UnitTestingCSharp.csproj
+++ b/UnitTestingCSharp/UnitTestingCSharp.csproj
@@ -41,6 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SingletonClass.cs" />
+    <Compile Include="StaticMethodInNonStaticClass.cs" />
+    <Compile Include="StaticMethodInStaticClass.cs" />
     <Compile Include="StaticMethodsClass.cs" />
     <Compile Include="InstanceMethodsClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
